Remove cpp version

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,13 @@
-clickos
-
-*.d
-*.o
-
-*~
+.vscode
 *.swp
+*.pyc
+dist/
+*.egg-info
+
+# Ignore Previous Work
+old/
+*.cc
+*.hh 
+
+# Other
+clickos/
