--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -30,12 +30,12 @@ jobs:
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
       - 
-        name: Login to Registry
+        name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
-          registry: ghcr.io
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.CR_PAT }}
+          registry: docker.io
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
       -
         name: Build and Push
         uses: docker/build-push-action@v2
@@ -45,6 +45,6 @@ jobs:
           platforms: linux/amd64
           push: true
           tags: |
-            ghcr.io/${{ steps.extract_owner.outputs.owner }}/unimon-ctl:${{ steps.extract_tag.outputs.tag }}
-            ghcr.io/${{ steps.extract_owner.outputs.owner }}/clickos-ctl:${{ steps.extract_tag.outputs.tag }}
+            docker.io/${{ steps.extract_owner.outputs.owner }}/unimon-ctl:${{ steps.extract_tag.outputs.tag }}
+            docker.io/${{ steps.extract_owner.outputs.owner }}/clickos-ctl:${{ steps.extract_tag.outputs.tag }}
           no-cache: false
