--- a/.github/workflows/docker-rolling.yml
+++ b/.github/workflows/docker-rolling.yml
@@ -31,12 +31,19 @@ jobs:
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
       - 
-        name: Login to Registry
+        name: Login to GH CRegistry
         uses: docker/login-action@v1
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.CR_PAT }}
+      - 
+        name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          registry: docker.io
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
       -
         name: Build and Push
         uses: docker/build-push-action@v2
@@ -47,5 +54,6 @@ jobs:
           push: true
           tags: |
             ghcr.io/${{ steps.extract_owner.outputs.owner }}/unimon-ctl:${{ steps.extract_branch.outputs.branch }}
-            ghcr.io/${{ steps.extract_owner.outputs.owner }}/clickos-ctl:${{ steps.extract_branch.outputs.branch }}
+            docker.io/${{ steps.extract_owner.outputs.owner }}/unimon-ctl:${{ steps.extract_branch.outputs.branch }}
+            docker.io/${{ steps.extract_owner.outputs.owner }}/clickos-ctl:${{ steps.extract_branch.outputs.branch }}
           no-cache: false
