--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -30,12 +30,12 @@ jobs:
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
       - 
-        name: Login to Docker Hub
+        name: Login to GH CRegistry
         uses: docker/login-action@v1
         with:
-          registry: docker.io
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.CR_PAT }}
       -
         name: Build and Push
         uses: docker/build-push-action@v2
@@ -44,7 +44,5 @@ jobs:
           file: Dockerfile
           platforms: linux/amd64
           push: true
-          tags: |
-            docker.io/${{ steps.extract_owner.outputs.owner }}/unimon-ctl:${{ steps.extract_tag.outputs.tag }}
-            docker.io/${{ steps.extract_owner.outputs.owner }}/clickos-ctl:${{ steps.extract_tag.outputs.tag }}
+          tags: ghcr.io/${{ steps.extract_owner.outputs.owner }}/unimon-ctl:${{ steps.extract_tag.outputs.tag }}
           no-cache: false
