--- a/.github/workflows/docker-rolling.yml
+++ b/.github/workflows/docker-rolling.yml
@@ -37,13 +37,6 @@ jobs:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.CR_PAT }}
-      - 
-        name: Login to Docker Hub
-        uses: docker/login-action@v1
-        with:
-          registry: docker.io
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
       -
         name: Build and Push
         uses: docker/build-push-action@v2
@@ -52,8 +45,5 @@ jobs:
           file: Dockerfile
           platforms: linux/amd64
           push: true
-          tags: |
-            ghcr.io/${{ steps.extract_owner.outputs.owner }}/unimon-ctl:${{ steps.extract_branch.outputs.branch }}
-            docker.io/${{ steps.extract_owner.outputs.owner }}/unimon-ctl:${{ steps.extract_branch.outputs.branch }}
-            docker.io/${{ steps.extract_owner.outputs.owner }}/clickos-ctl:${{ steps.extract_branch.outputs.branch }}
+          tags: ghcr.io/${{ steps.extract_owner.outputs.owner }}/unimon-ctl:${{ steps.extract_branch.outputs.branch }}
           no-cache: false
