--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -46,3 +46,8 @@ jobs:
           push: true
           tags: ghcr.io/${{ steps.extract_owner.outputs.owner }}/unimon-ctl:${{ steps.extract_tag.outputs.tag }}
           no-cache: false
+          labels: |
+            org.opencontainers.image.title=${{ github.event.repository.name }}
+            org.opencontainers.image.url=${{ github.event.repository.html_url }}
+            org.opencontainers.image.source=${{ github.event.repository.html_url }}
+            org.opencontainers.image.revision=${{ github.sha }}
