--- a/.github/workflows/docker-rolling.yml
+++ b/.github/workflows/docker-rolling.yml
@@ -47,3 +47,8 @@ jobs:
           push: true
           tags: ghcr.io/${{ steps.extract_owner.outputs.owner }}/unimon-ctl:${{ steps.extract_branch.outputs.branch }}
           no-cache: false
+          labels: |
+            org.opencontainers.image.title=${{ github.event.repository.name }}
+            org.opencontainers.image.url=${{ github.event.repository.html_url }}
+            org.opencontainers.image.source=${{ github.event.repository.html_url }}
+            org.opencontainers.image.revision=${{ github.sha }}
